wrap fix for skills page

--- a/website/src/pages/skills-page/skills-page.css
+++ b/website/src/pages/skills-page/skills-page.css
@@ -1,6 +1,5 @@
 #skills > .section-body {
   flex-direction: row;
   align-items: flex-start;
-  justify-content: space-between;
   flex-wrap: wrap;
 }
